--- a/game/package.json
+++ b/game/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "webpack",
     "start": "node build/app.js",
-    "dev": "webpack serve --port 8080 --hot --open"
+    "dev": "webpack serve --hot --open"
   },
   "dependencies": {
     "express": "^4.17.1",
